-- Create Contracts Table
CREATE TABLE options_contracts (
    symbol VARCHAR(50) PRIMARY KEY,
    underlying_symbol VARCHAR(20),
    type VARCHAR(10),
    expiration_date TIMESTAMPTZ,
    strike DECIMAL(12, 3),
    description TEXT
);

-- Enable Row Level Security (RLS) - Recommended for Supabase
ALTER TABLE options_contracts ENABLE ROW LEVEL SECURITY;

-- Create Prices Table
CREATE TABLE market_prices (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    contract_symbol VARCHAR(50) REFERENCES options_contracts(symbol),
    price DECIMAL(12, 3),
    broker_timestamp TIMESTAMPTZ,
    system_timestamp TIMESTAMPTZ DEFAULT NOW(),
    volume INTEGER
);
ALTER TABLE market_prices ENABLE ROW LEVEL SECURITY;

-- Create Positions Table
CREATE TABLE positions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100),
    description TEXT,
    status VARCHAR(20) DEFAULT 'OPEN', -- OPEN, CLOSED
    created_at TIMESTAMPTZ DEFAULT NOW()
);
ALTER TABLE positions ENABLE ROW LEVEL SECURITY;

-- Create Operations Table
CREATE TABLE operations (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    contract_symbol VARCHAR(50) REFERENCES options_contracts(symbol),
    operation_type VARCHAR(4) CHECK (operation_type IN ('BUY', 'SELL')),
    quantity INTEGER NOT NULL,
    price DECIMAL(12, 3) NOT NULL,
    operation_date TIMESTAMPTZ DEFAULT NOW()
);
ALTER TABLE operations ENABLE ROW LEVEL SECURITY;

-- Create Position-Operations Link Table
CREATE TABLE position_contains_operations (
    position_id BIGINT REFERENCES positions(id),
    operation_id BIGINT REFERENCES operations(id),
    PRIMARY KEY (position_id, operation_id)
);
ALTER TABLE position_contains_operations ENABLE ROW LEVEL SECURITY;

-- Create Daily Operated Volumes Table
CREATE TABLE daily_operated_volumes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    symbol VARCHAR(50) REFERENCES options_contracts(symbol),
    covered INTEGER,
    opposed INTEGER,
    crossed INTEGER,
    uncovered INTEGER,
    total INTEGER,
    date DATE DEFAULT CURRENT_DATE
);
ALTER TABLE daily_operated_volumes ENABLE ROW LEVEL SECURITY;

-- Enable Realtime for market_prices (Supabase specific)
-- allow listening to INSERTs
alter publication supabase_realtime add table market_prices;
