@startuml

entity "options_contracts" {
  *symbol : VARCHAR(50) <<PK>>
  --
  underlying_symbol : VARCHAR(20)
  type : VARCHAR(10)
  expiration_date : TIMESTAMP
  strike : DECIMAL(10, 3)
  description : TEXT
}

entity "market_prices" {
  *id : SERIAL <<PK>>
  --
  contract_symbol : VARCHAR(50) <<FK>>
  price : DECIMAL(10, 3)
  timestamp : TIMESTAMP
  volume : INTEGER
}

entity "positions" {
  *id : SERIAL <<PK>>
  --
  name : VARCHAR(100)
  description : TEXT
  status : VARCHAR(20)
  created_at : TIMESTAMP
}

entity "operations" {
  *id : SERIAL <<PK>>
  --
  position_id : INTEGER <<FK>>
  contract_symbol : VARCHAR(50) <<FK>>
  operation_type : VARCHAR(4)
  quantity : INTEGER
  price : DECIMAL(10, 3)
  operation_date : TIMESTAMP
}

options_contracts ||..o{ market_prices : "has many"
positions ||..o{ operations : "contains"
options_contracts ||..o{ operations : "referenced in"

@enduml
